exports[`Component: SearchResults when given a one result should render a correctly worded message 1`] = `
<ul
  className="SearchResults_wjap3z">
  <li
    className="SearchResults_item_ekglxz">
    <a
      className="Result_o39i78"
      href="foo"
      onClick={[Function]}>
      <div
        className="Image_13hv8io"
        style={
          Object {
            "minHeight": 100,
          }
        }>
        <img
          alt="foo"
          className="Result_img_11oizi4-o_O-responsiveImg_khup4t"
          height={140}
          onLoad={[Function]}
          src="avatar.jpg&s=225"
          width={140} />
        <svg />
      </div>
      <div
        className="Result_userInfo_1bp0i9f userinfo">
        <p
          className="Result_username_ypjw20">
          foo
        </p>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Component: SearchResults when given a set of results and entities should render them with a message 1`] = `
<ul
  className="SearchResults_wjap3z">
  <li
    className="SearchResults_item_ekglxz">
    <a
      className="Result_o39i78"
      href="foo"
      onClick={[Function]}>
      <div
        className="Image_13hv8io"
        style={
          Object {
            "minHeight": 100,
          }
        }>
        <img
          alt="foo"
          className="Result_img_11oizi4-o_O-responsiveImg_khup4t"
          height={140}
          onLoad={[Function]}
          src="avatar.jpg&s=225"
          width={140} />
        <svg />
      </div>
      <div
        className="Result_userInfo_1bp0i9f userinfo">
        <p
          className="Result_username_ypjw20">
          foo
        </p>
      </div>
    </a>
  </li>
  <li
    className="SearchResults_item_ekglxz">
    <a
      className="Result_o39i78"
      href="foobar"
      onClick={[Function]}>
      <div
        className="Image_13hv8io"
        style={
          Object {
            "minHeight": 100,
          }
        }>
        <img
          alt="foobar"
          className="Result_img_11oizi4-o_O-responsiveImg_khup4t"
          height={140}
          onLoad={[Function]}
          src="avatar.jpg&s=225"
          width={140} />
        <svg />
      </div>
      <div
        className="Result_userInfo_1bp0i9f userinfo">
        <p
          className="Result_username_ypjw20">
          foobar
        </p>
      </div>
    </a>
  </li>
</ul>
`;

exports[`Component: SearchResults when the results are 0 should not render a message 1`] = `
<ul
  className="SearchResults_wjap3z" />
`;
